profile.css
/* ... */
 
.header-navlink1 {
  transition: 0.5s;
  margin-left: var(--dl-layout-space-halfunit);
  margin-right: var(--dl-layout-space-halfunit);
  text-decoration: none;
}
 
.header-navlink1:hover {
  transform: scale(0.95);
}
 
.header-navlink2 {
  display: contents;
}
 
.header-thq-profil-elm {
  display: none;
  transition: 0.3s;
  text-decoration: none;
}
 
.header-thq-profil-elm:hover {
  transform: scale(0.90);
}
 
.header-container2 {
  flex: 0 0 auto;
  display: flex;
  align-items: center;
  flex-direction: row;
}
 
.header-link1 {
  display: contents;
}
 
.header-icon13 {
  width: 25px;
  height: 25px;
  margin: var(--dl-layout-space-triplequarter);
  margin-top: var(--dl-layout-space-halfunit);
  margin-left: var(--dl-layout-space-triplequarter);
  margin-right: var(--dl-layout-space-triplequarter);
  margin-bottom: var(--dl-layout-space-halfunit);
  text-decoration: none;
}
 
.header-link2 {
  display: contents;
}
 
.header-icon15 {
  width: 22px;
  height: 22px;
  margin: var(--dl-layout-space-triplequarter);
  text-decoration: none;
}
 
.header-link3 {
  display: contents;
}
 
.header-icon19 {
  width: 25px;
  height: 25px;
  margin: var(--dl-layout-space-triplequarter);
  margin-top: var(--dl-layout-space-halfunit);
  margin-left: var(--dl-layout-space-triplequarter);
  margin-right: var(--dl-layout-space-triplequarter);
  margin-bottom: var(--dl-layout-space-halfunit);
  text-decoration: none;
}
 
.headerroot-class-name {
  margin-bottom: 0px;
}
 

 
@media(max-width: 991px) {
  .header-thq-header-elm {
    max-width: 1320px;
    margin-bottom: var(--dl-layout-space-triplequarter);
  }
  .header-thq-profil-elm {
    display: none;
  }
}
 
@media(max-width: 767px) {
  .header-text {
    display: none;
    font-size: 1.25rem;
    text-align: center;
    font-weight: 700;
    line-height: 1.75;
    text-transform: none;
    text-decoration: none;
  }
  .header-container1 {
    display: none;
  }
  .header-thq-profil-elm {
    width: 25px;
    height: 25px;
    display: flex;
  }
  .header-container2 {
    display: none;
  }
  .headerroot-class-name {
    margin-bottom: 0px;
  }
  .headerroot-class-name1 {
    background-color: transparent;
  }
}
 
@media(max-width: 479px) {
  .header-text {
    display: none;
  }
  .header-thq-profil-elm {
    display: flex;
  }
}

.counter-wrapper {
  display: contents;
}
 
.counter-container1 {
  flex: 0 0 auto;
  display: flex;
  padding: var(--dl-layout-space-halfunit);
  align-items: center;
  flex-direction: column;
}
 
.counter-container2 {
  flex: 0 0 auto;
  width: auto;
  height: auto;
  display: flex;
  align-items: flex-start;
  justify-content: center;
}
 
.counter-icon1 {
  width: 14px;
  height: 25px;
}
 
.counter-text {
  color: var(--dl-color-secondary-500);
}

.primary-button-wrapper {
  display: contents;
}
 
.primary-button-container {
  width: 80px;
  display: flex;
  position: relative;
}
 
.primary-button-button {
  color: var(--dl-color-gray-white);
  width: 80px;
  align-items: center;
  justify-content: center;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  transition: 0.5s;
  line-height: 1;
  padding-top: var(--dl-layout-space-halfunit);
  border-width: 0px;
  padding-left: var(--dl-layout-space-unit);
  padding-right: var(--dl-layout-space-unit);
  padding-bottom: var(--dl-layout-space-halfunit);
  text-transform: none;
  background-color: var(--dl-color-pimary-500);
}
 
.primary-button-button:hover {
  background-color: var(--dl-color-secondary-300);
}
 
.primary-button-button:active {
  background-color: var(--dl-color-secondary-300);
}

.secondary-button-wrapper {
  display: contents;
}
 
.secondary-button-container {
  width: 80px;
  display: flex;
  position: relative;
}
 
.secondary-button-button {
  color: var(--dl-color-gray-white);
  width: 80px;
  align-items: center;
  justify-content: center;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  transition: 0.5s;
  line-height: 1;
  padding-top: var(--dl-layout-space-halfunit);
  border-width: 0px;
  padding-left: var(--dl-layout-space-unit);
  padding-right: var(--dl-layout-space-unit);
  padding-bottom: var(--dl-layout-space-halfunit);
  text-transform: uppercase;
  background-color: var(--dl-color-pimary-500);
}
 
.secondary-button-button:hover {
  background-color: var(--dl-color-secondary-300);
}
 
.secondary-button-button:active {
 background-color: var(--dl-color-secondary-300);
}
 
.secondary-buttonroot-class-name {
  margin-top: var(--dl-layout-space-unitandhalf);
}

.footer-wrapper {
  display: contents;
}
 
.footer-container1 {
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  background-color: var(--dl-color-pimary-900);
}
 
.footer-container2 {
  width: 100%;
  display: flex;
  max-width: 1320px;
  flex-direction: row;
  justify-content: center;
}
 
.footer-container3 {
  flex: 0 0 auto;
  display: flex;
  align-items: center;
  flex-direction: column;
}
 
.footer-text1 {
  color: var(--dl-color-secondary-400);
  margin-top: var(--dl-layout-space-unit);
  font-weight: 600;
}
 
.footer-container4 {
  display: flex;
  margin-top: var(--dl-layout-space-unit);
  align-items: flex-start;
  margin-bottom: var(--dl-layout-space-unit);
  flex-direction: row;
}
 
.footer-container5 {
  flex: 0 0 auto;
  width: 2.5rem;
  height: 2.5rem;
  display: flex;
  align-items: center;
  margin-left: var(--dl-layout-space-unit);
  margin-right: var(--dl-layout-space-unit);
  flex-direction: row;
  justify-content: center;
}
 
.footer-link1 {
  display: contents;
}
 
.footer-icon10 {
  width: var(--dl-layout-size-doubleunit);
  height: var(--dl-layout-size-doubleunit);
  display: block;
  text-decoration: none;
}
/* ... */

